--- a/latex/all_usepackages.tex
+++ b/latex/all_usepackages.tex
@@ -54,5 +54,5 @@
 % Dark
 %\definecolor{myBGcolor}{HTML}{3E3535}
 %\definecolor{myTextcolor}{HTML}{CFECEC}
-%\pagecolor{myBGcolor}
 %\color{myTextcolor}
+\pagecolor{myBGcolor}
