--- a/latex/merged_references.bib
+++ b/latex/merged_references.bib
@@ -2,12 +2,26 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Evan Bollig at 2013-09-27 14:18:36 -0500 
+%% Created for Evan Bollig at 2013-09-29 03:15:03 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@techreport{CHACO1995,
+	Author = {Bruce Hendrickson AND Robert Leland},
+	Date-Added = {2013-09-29 08:11:59 +0000},
+	Date-Modified = {2013-09-29 08:15:01 +0000},
+	Title = {The Chaco User's Guide: Version 2.0},
+	Year = {1995}}
+
+@techreport{SCOTCH1996,
+	Author = {Fran{\c c}ois Pellegrini},
+	Date-Added = {2013-09-29 08:10:08 +0000},
+	Date-Modified = {2013-09-29 08:10:18 +0000},
+	Title = {Scotch 3.1 User's Guide},
+	Year = {1996}}
 
 @article{StCyr2007,
 	Added-At = {2008-08-07T00:00:00.000+0200},
