METIS nearly done

--- a/latex/distributed_solver.tex
+++ b/latex/distributed_solver.tex
@@ -113,25 +113,16 @@ The take-away from Equation~\ref{eq:load_balance} is that potential gains in par
 
 To ensure load balancing, one commonly turns to \emph{graph partitioning} algorithms. Formally, graph partitioning algorithms attempt to solve the $k$-way partitioning problem \cite{Karypis1999}: given a graph $G = (V,E)$ with vertices ($V$) and any number of edges ($E$), partition $V$ into $k$ subsets, $V_1, V_2, ..., V_k$ such that $V_i \cap V_j = \emptyset$ for $i \neq j$, the size of each partition $|V_i| \approx \frac{N}{k}$, $\bigcup_i V_i = V$, and the number of edges whose incident vertices belong to different $V_i$ is minimized. In other words, we seek a partitioning of a graph that results in roughly equal sized subgraphs connected by as few edges as possible. In this case we apply the algorithms to the adjacency graph produced by RBF-FD stencils (see \S~\ref{subsec:adjacency}).
 
-The output from graph partitioning algorithms are ideal for parallel applications. First, partitions of roughly equal size ensure a balanced workload across processors. Second, edges correspond to ghost node dependencies, so minimizing those connections also minimizes data transfer in parallel applications. 
+The output from graph partitioning algorithms are ideal for parallel applications for two reasons. First, partitions of roughly equal size ensure a balanced workload across processors. Second, edges correspond to ghost node dependencies, so minimizing those connections also ensures minimized data transfer via MPI. 
 
-In the 1990s a number of libraries surfaced for graph partitioning including Chaco \cite{CHACO1995}, SCOTCH \cite{SCOTCH1996}, and METIS \cite{Karypis1999}. 
+A number of libraries exist for graph partitioning including Chaco \cite{CHACO1995}, SCOTCH \cite{SCOTCH1996}, and the METIS family of algorithms (METIS, ParMETIS, hMETIS) \cite{Karypis1999}. The partitioning algorithm varies by library, but in all cases the libraries provide options for partitioning, vertex reordering, and graph coloring.
 
+This work employs the METIS library for partitioning via the library's included \emph{gpmetis} executable. METIS performs a multi-level recursive bisection algorithm for partitioning. At its core the algorithm first coarsen the graph into a sequence of smaller resolutions, applies a split to the coarsest resolution, and then pops back through the levels of recursion to project the coarse split onto finer graphs \cite{Karypis1999}. As input, METIS requires an undirected adjacency graph and the desired number of partitions. 
+In return for the graph, METIS writes a file containing one integer per vertex, indicating the partition to which each stencil center is assigned. 
 
- Other interesting decompositions can be generated with software libraries such as the METIS \cite{Karypis1999} family of algorithms, capable of partitioning and reordering directed graphs produced by RBF-FD stencils. 
-
-
-
-In order to partition our nodes, METIS requires an undirected adjacency graph representing the edges that connect nodes. In this case the adjacency graph for RBF-FD is directed. The undirected version is constructed with. 
-
-The undirected graph is used only for partitioning and subsequently discarded. 
-
-METIS divides stencils into contiguous partitions of nearly equivalent size. 
-
+Since the adjacency graph for RBF-FD is directed, symmetry is induced in the associated matrix with $A+A^T$. The added connectivity is harmless to RBF-FD as symmetry is only meant for partitioning purposes and does not impact actual DMs. With respect to load balancing: cutting an edge connecting stencil nodes $s_1$ and $s_2$, is equivalent to cutting its transpose, so METIS is equally resistant apply a cut whether the edge is directed or undirected. 
 
 %TODO: give overview of how boost graph library is used to construct a sparse adjacency graph
-
-In Figure~\ref{fig:undirected_graph} new non-zeros are introduced to induce symmetry. Since the goal is to partition the physical domain, this added connectivity is harmless to RBF-FD. However, with respect to load balancing, this may not be ideal. For every new nonzero introduced to a row, METIS assumes an additional node utilized by the partition. When the node is a false connection, it is one fewer centers that METIS will assign to the partition in an attempt to keep all partitions balanced. 
 
 
 
